<resources>
    <string name="app_name">Dream Team</string>
    <string name="title_activity_inicio2">Inicio2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_title2">Dream Team</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_exit">Exit</string>
    <string name="action_communicate">Communicate</string>
    <string name="action_information">Information</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_portifolio">New portifolio</string>
    <string name="menu_Job_list">Job list</string>
    <string name="menu_job">New job</string>
    <string name="menu_pessoa">New person</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Exit</string>
    <string name="menu_send">Send</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_fragment">Home</string>
    <string name="gallery_fragment">Gallery</string>
</resources>
